[metadata]
name = doonroom_db
version = attr: doonroom_db.__version__
description = 同人音声の部屋 (http://doonroom.blog.jp/) Unofficial DB
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/eggplants/doonroom_db
author = eggplants
author_email = w10776e8w@yahoo.co.jp
license = MIT
license_file = LICENSE.txt
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
install_requires =
    beautifulsoup4>=4.11.1
    lxml>=4.8.0
    types-beautifulsoup4
python_requires = >=3.7
include_package_data = True

[options.entry_points]
console_scripts =
    ddb = doonroom_db.main:main

[options.extras_require]
dev =
    black
    flake8
    mypy
    pytest
    setuptools>=46.4.0
    types-setuptools

[options.package_data]
doonroom_db = py.typed

[isort]
profile = black

[flake8]
indent-size = 4
max-line-length = 120
extend-ignore = W605,E203

[mypy]
python_version = 3.9
show_error_codes = True
pretty = True
strict = True

[tool:black]
line-length = 88
